<resources>
    <string name="hello">Welcome to PPGoPlaces!</string>
    <string name="add">Add</string>
    <string name="sort">Sort</string>
    <string name="update">Update</string>
    <string name="OK">OK</string>
    <string name="quit">Quit</string>
    <string name="discard">Discard</string>
    <string name="delete">Delete</string>
    <string name="app_name">PPGoPlaces</string>
    <string name="name_of_places">Name of Places</string>
    <string name="name_of_holiday">My Holidays</string>
    <string name="add_new_holiday"> Add New Holiday</string>
    <string name="add_new_location">Add New Location</string>
    <string name="update_location"> Update Location</string>
    <string name="update_holiday"> Update Holiday Info</string>
    <string name="edit_holiday"> EDIT HOLIDAY</string>
    <string name="edit_location">EDIT LOCATION</string>
    <string name="view_holiday"> Holidays and Trips</string>
    <string name="delete_holidays">Delete Selected Holidays</string>
    <string name="no_holiday">NO HOLIDAY</string>
    <string name="add_a_new_trip">ADD A NEW HOLIDAY/TRIP</string>
    <string name="cancel">Cancel</string>
    <string name="hol_name_hint_text">Enter "Holiday Name"" below (e.g. Germany - May 2010)</string>
    <string name="loc_add_hint_text">"Enter address here or search by map to get address, e.g. 5th Avenue, New York, USA"</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="unsaved_changes_message">Do you want to Abort without saving?</string>
    <string name="abort">Yes, Abort</string>
    <string name="view_holidays">Holiday List</string>
    <string name="view_locations">View Locations</string>
    <string name="view_shopping">Shopping List</string>
    <string name="edit">edit</string>
    <string name="notes_">"Notes: "</string>
    <string name="action_select_title">Action Menu</string>
    <string name="post_action_title">Added Successfully</string>
    <string name="update_action_title">Updated Successfully</string>
    <string name="whats_next">What do you like to do next?</string>
    <string name="add_another_holiday">Add another trip</string>
    <string name="add_a_new_loc">NEW PLACE OF INTEREST</string>
    <string name="list_view">Return to List view</string>
    <string name="map_it">Find Map</string>
    <string name="view_map">View Map</string>
    <string name="map_title">Map A Location</string>
    <string name="map_address">Find Address</string>
    <string name="use_location">Use Location</string>
    <string name="use_current">Current Location</string>
    <string name="current_location">Your Current Location</string>
    <string name="tripcountry">Trip Country</string>
    <string name="choose_a_country">Destination country</string>
    <string name="choose_holiday_country">Enter your next destination, e.g. UK, Germany</string>
    <string name="hint_date">Tap On Date To Change..</string>
    <string name="enter_name_of_your_trip">Enter name of your trip</string>
    <string name="date_out_of_range">Location Date is not within Holiday period"2</string>
    <string name="alert">Alert</string>
    <string name="date_not_within_holiday_period">Date Not Within Holiday Period</string>
    <string name="holiday_information">Holiday Information :</string>
    <string name="loc_name_hint">Enter Location Name</string>
    <string name="say_cheese">Take Picture</string>
    <string name="date_mismatch">Date MisMatch</string>
    <string name="continue_update">Yes.SAVE</string>
     <string name="cancel_to_edit">NO.Return to Edit</string>
     <string name="add_goody">Add item</string>
     <string name="add_location_for_goody">Add location</string>
     <string name="remove_selected_items">Removed Selected Items</string>
     <string name="show_local_items_only">Show Local Items</string>
     <string name="shopping">Shopping List</string>
     <string name="add_shopping">Add Shopping Item</string>
     <string name="use_current_location">Use Current</string>
     <string name="use_address">Use Address</string>
     <string name="image_gallery">View Photos</string>
     <string name="tag_location">Tag Location To Holiday</string>
     <string name="location_name">Location Name</string>
     <string name="location_gallery">Location Photos Gallery</string>
     <string name="delete_image">Delete Image?</string>
     <string name="mark_image">Mark For Delete</string>
     <string name="unmark_image">UnMark For Delete</string>
     <string name="unmark">UnMark</string>
     <string name="mark">Mark</string>
     <string name="handyman">Handyman</string>
     <string name="reverse">Reverse</string>
     <string name="add_new">Add New</string>
     <string name="no_holiday_found">No Holiday Found</string>
     <string name="entry_error">Error Message</string>
     <string name="home">Home     </string>
     <string name="_home_">"  HOME "</string>
     <string name="location_address_found">Location Address Found</string>
     <string name="use_this_address">Use This Address</string>
     <string name="myprefs">My Preferences</string>
     <string name="list_is_empty">List Is Empty</string>
     <string name="holiday_checklist">Holiday CheckList</string>
     <string name="empty_list">Empty List</string>
     <string name="no_items">List Is Empty</string>
     <string name="task_category">Task Category</string>
     <string name="home_general">Home, General</string>
     <string name="no_holiday_tag_to_location">Not Tag To Holiday</string>
     <string name="delete_selected">Delete All Selected</string>
     <string name="preference_settings">My Preference Setting</string>
     <string name="update_my_preferences">Update My Preferences</string>
     <string name="trip_calculator_setup">Trip Calculator Setup</string>
     <string name="album">Album</string>
     <string name="today_date">Today Date</string>
     <string name="enter_holiday_name">Enter Holiday Name</string>
     <string name="add_city_of_visit">Add Cities Of Visit</string>
     <string name="enter_location_address">Enter Location Address</string>
     <string name="get_address">Address</string>
     <string name="find_map">Find Map</string>
     <string name="camera">Camera</string>
     <string name="tip">tip</string>
     <string name="currency">currency</string>
     <string name="setup">Setup</string>
     <string name="hide">Hide</string>
     <string name="show_all">Show All</string>
     <string name="holiday">Holiday     </string>
     <string name="select">Selected</string>
     <string name="unselect"></string>
     <string name="pictures_tagged">Selected Pictures Added To Location Album</string>
     <string name="press_here_for_context_menu">Press here for context menu</string>
     <string name="menu_here">MENU HERE</string>
     <string name="target_price">Target Price</string>
     <string name="target_price_home_currency">"Target Price (Home Currency) : "</string>
     <string name="shopping_list">Shopping List</string>
     <string name="facebook">Facebook Login</string>
	<string name="eula_title">License Agreement</string>
	<string name="eula_accept">Accept</string>
	<string name="eula_refuse">Don\'t Accept</string>
	<string name="view_checklist">Check List</string>
	<string name="last_location">Last Location</string>
	<string name="welcome_notes">
	    		<h1>Thank you for trying out PPGoPlaces</h1>
	    		<hr />
	    		<br></br>
	    		<p>Today smart phone allowed us to spontaneously take interesting pictures, 
     		   capturing the moment and wonderful memory whether we are at home or while on holiday. 
     		   However, the camera or photo gallery fell short of providing us a way to document or present 
     		   the memory the way we like to remember it, i.e. recalling details of the event and sweet moment, 
     		   when and where. </p>

				<p>Like many, I have been trying for years hoping to find a better way to recall the event of many 
				pictures that I took over the years, trying hard to recall the details of the moments. </p>

				<p>Recently, I got interested in learning programming for Android, so I thought what best then to write an app 
				that help me better organize these photos and organize the memories. The journey of learning Android is a real joy 
				and a very exciting one, mainly because I am be able to write a app that I love to have and the way I use it.  </p>

				<h2>So what is PPGoPlaces? or PP Going Places</h2>

				<p>Basically, the app purpose is around capturing the location, or place of interest that we collected.  
				The \"Add Location\" feature make use of Google location aware to assist user in discovering the address  
				or location GPS co-ordinates (i.e. if user is away from data roaming location, or away from home country. 
				The former required access to data network or network connection. </p>

				<p>The app also allows adding holiday information, whether pre or post holiday trip, allowing the user to 
				group the locations to a particular holiday.  As an example, a holiday to Italy, which I usually like to label 
				as \"Italy – August 2010\" and the user is able to then tag a whole bunch of locations he/she visited to the holiday, 
				such as Colosseum in Rome, Leaning Tower of Pisa, Pompeii, Uffizi Museum in Florence, etc. </p>

				<p>Once adding location and upon selecting a location, the camera button will be available, which let the user 
				make use of Android default camera app to take picture and in turn tag it to the location selected. Once pictures 
				are successfully added to a location, the album button will be available so that user is able to review the 
				picture for the selected location.</p>

				<p>I had also added couple of useful utilities that I really like, I actually does these previously on either paper base 
				, sometime as a note on phone notepad or even save as a draft in email, but none of the methods previously can give 
				me a better way to manage the list. These utility apps are a holiday checklist, a shopping list  
				and a very simple calculator.</p>
					
    			<p><b>Hope you ENJOY the application as much as I do. </b></p>
    			<p>Do drop me a mail at <b>ppgoplaces@gmail.com</b> if you like the app.</p> 
   			</string>
	<string name="simple_help">Simple Help</string>
	<string name="do_not_show_again">Do not show this again.</string>
	<string name="sdcard_is_not_found">Sdcard is not mounted, please check and retry</string>
	<string name="save_location_image">Save Location Image</string>
	<string name="share_this_view">Share This View</string>
	<string name="ppgoplaces">com.liseem.android.travel</string>
	<string name="change_category_name">Change Category Name</string>
	<string name="save_changes">Save Changes</string>
	<string name="nice_shot">Nice shot! new picture added to location</string>
	<string name="No_network_for_map_show">No data network connection found, required for display map</string>
	<string name="No_location_info">No location information found</string>
	<string name="delete_this_holiday">Delete this Holiday?</string>
	<string name="note_deleted_record_is_not_recoverable">"\n\nNOTE: \nDeleted record is not recoverable. "</string>
	<string name="yes_delete">YES, Delete</string>
	<string name="cancel_action">Cancel Action</string>
	<string name="edit_">"edit "</string>
	<string name="delete_">delete</string>
	<string name="view_locations_map">View Locations Map</string>
	<string name="shopping_list_for_holiday">Shopping List For Holiday</string>
	<string name="view_home_locations">View Home Locations</string>
	<string name="holiday_menu">Holiday Menu</string>
	<string name="settings">Settings</string>
	<string name="help">Help</string>
	<string name="sort_by_start_date">Sort By Start Date</string>
	<string name="sort_by_name">Sort By Name</string>
	<string name="new_item">New Item</string>
	<string name="enter_item_name">Enter item name</string>
</resources>