<?xml version="1.0" encoding="utf-8"?>
<!-- item layout - /layout/custom_list.xml 
		listview layout animation anim/controller -  list_layout_controller.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#003366"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <Spinner
        style="@style/SpinnerBarAlt"
       android:id="@+id/taskCat"
       android:layout_width="fill_parent"
       android:layout_height="40dp" />

	<ListView
	    android:id="@+id/listItem"
		android:persistentDrawingCache="animation|scrolling"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layoutAnimation="@anim/list_layout_controller"		
		android:layout_above="@+id/addButton"
		android:layout_below="@id/taskCat" />
	    
	<TextView
	    style="@style/TextViewBlue"
		android:id="@+id/emptyList"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_above="@+id/addButton"
		android:layout_below="@id/taskCat" 
		android:gravity="center"
		android:text="@string/empty_list" />
		
	<Button
	    style="@style/ButtonGray"
	    android:id="@id/addButton"
 		android:layout_width="190sp"
 		android:layout_height="wrap_content"
 		android:textStyle="bold"
 		android:shadowColor="#565853"
 		android:layout_alignParentBottom="true"
 		android:text="@string/add_new" />
	
	<ToggleButton
	    android:id="@+id/showNotcomplete"
	    style="@style/ToggleButtonBlue"
	    android:layout_width="100sp"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true"
	    android:layout_toRightOf="@id/addButton"
	    android:textStyle="bold"
	    android:textOff="@string/show_all"
	    android:textOn="@string/hide" />

</RelativeLayout>
